<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1tenth_stack</name>
  <version>0.0.1</version>
  <description>Onboard drivers for vesc and sensors for F1TENTH vehicles.</description>
  <maintainer email="jwl9vq@virginia.edu">Hongrui Zheng</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ackermann_msgs</depend>
  <depend>urg_node</depend>
  <depend>joy</depend>
  <depend>joy_teleop</depend>
  <depend>rosbridge_server</depend>
  <depend>vesc</depend>
  <depend>ackermann_mux</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
